--- a/TCC/Index.css
+++ b/TCC/Index.css
@@ -6,14 +6,15 @@
     src:url(Lofi.otf)
 }
 
+.float {float: right;}
 /* Home */
-.title{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 35px; color: rgb(253, 82, 0);}
-.titleL{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 35px; color: papayawhip;}
+.title{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 60px; color: rgb(253, 82, 0);}
+.titleL{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 60px; color: papayawhip;}
 
-.textos {font-family:Font2; font-weight: bold; font-size: 25px; color: rgb(42, 45, 52);  }
+.textos {font-family:Font2; font-weight: bold; font-size: 30px; color: rgb(42, 45, 52);  }
 
 /* NAV start */
-.logo {text-align:start; margin-right: 20px;   background: linear-gradient(to right, #000 20%, rgb(253, 82, 0) 30%, #000 70%, rgb(253, 82, 0) 80%);
+.logo {text-align:start; margin-right: 20px;   background: linear-gradient(to right, #000 20%, #000 30%, #000 70%, rgb(253, 82, 0) 80%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -23,7 +24,7 @@
     font-family:Font1 ;
     font-size: 60px;
   }
-  
+
   @keyframes textShine {
     to {
       background-position: 200%;
@@ -52,24 +53,30 @@
  /* NAV end */
 
 body{ margin: 0; padding: 0; background-color: black; min-height: 100vh;
-  min-width: 100vh;
-    
-    margin: 2 auto;
+  min-width: 140vh;
 }
+.logoI {text-align: center;font-family:Font1; font-size: 200px; -webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;  }
+
 /* Sections start */
-.section1{ height: 450px;background-color: papayawhip; }
-.molding1{  padding: 40px 350px 60px ; height: 200px; width: 250px; 
+.section0{ height: 700px;background-color: rgb(253, 82, 0); }
+.molding0{  padding: 40px 300px 60px ; height: 200px; width: 550px;float: left; 
+}
+
+.section1{ height: 650px;background-color: papayawhip; }
+.molding1{  padding: 40px 300px 60px ; height: 200px; width: 550px;float: left; 
 }
 
 .section2 {height: 450px; border: solid 1px rgb(20, 36, 138); background-color:rgb(253, 82, 0) ; 
 }
-.molding2{  padding: 40px 350px 60px ; height: 200px; width: 250px; 
+.molding2{  padding: 40px 300px 60px ; height: 200px; width: 550px; float: left; 
 }
 
 .section3 {height: 450px; ; background-color:papayawhip ; 
 }
-.molding3{  padding: 40px 350px 60px ; height: 200px; width: 250px; 
+.molding3{  padding: 40px 300px 60px ; height: 200px; width: 550px;float: left; 
 }
+
 
 /* Sections end */
 /* Home End */
