--- a/TCC/Index.css
+++ b/TCC/Index.css
@@ -6,15 +6,19 @@
     src:url(Lofi.otf)
 }
 
+body{padding: 0; margin: 0;}
+ 
 .float {float: right;}
 /* Home */
-.title{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 60px; color: rgb(253, 82, 0);}
-.titleL{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 60px; color: papayawhip;}
+.title{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(253, 82, 0);text-align: center;padding-top: 1vw; }
+.titleL{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 3vw; color: papayawhip;text-align: center;}
 
-.textos {font-family:Font2; font-weight: bold; font-size: 30px; color: rgb(42, 45, 52);  }
+.textos {font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(42, 45, 52); text-align: center; }
+.textos1 {font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(42, 45, 52); text-align: center;  }
+
 
 /* NAV start */
-.logo {text-align:start; margin-right: 20px;   background: linear-gradient(to right, #000 20%, #000 30%, #000 70%, rgb(253, 82, 0) 80%);
+.logo {text-align:start; margin-right: 2vw;font-size: 3vw;   background: linear-gradient(to right, #000 20%, #000 30%, #000 70%, rgb(253, 82, 0) 80%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -24,7 +28,6 @@
     font-family:Font1 ;
     font-size: 60px;
   }
-
   @keyframes textShine {
     to {
       background-position: 200%;
@@ -34,52 +37,83 @@
 .nav {
     box-shadow: inset 0 0 0 0 rgb(253, 82, 0);
     color: rgb(42, 45, 52);
-    margin: 0 -0px;
-    padding: 10px;
+    margin: 0 -0vw;
+    padding: 1.3831258644536653vh;
     transition: color .5s ease-in-out, box-shadow .5s ease-in-out;
     text-decoration: none;
     text-align: right;
    
 }
 .nav:hover {
-    box-shadow: inset 250px 0 0 0 rgb(253, 82, 0);
+    box-shadow: inset 20vw 0 0 0 rgb(253, 82, 0);
     color: rgb(255, 255, 255);
   }
 
-  header { background-color: rgb(249, 245, 255); height: 100px; border: solid 1px rgb(20, 36, 138)
+
+  header { background-color: rgb(249, 245, 255); height: 6vh; border: solid 1px rgb(20, 36, 138); margin-left: auto; margin-right: auto; padding: 3vh; font-size: 3vw;font-family:Font2; position: fixed; width: 100%;
   }
-   nav {margin-left: auto; margin-right: auto; padding: 20px; font-size: 50px;font-family:Font2; 
-  }
+ 
  /* NAV end */
 
-body{ margin: 0; padding: 0; background-color: black; min-height: 100vh;
-  min-width: 140vh;
-}
-.logoI {text-align: center;font-family:Font1; font-size: 200px; -webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-  animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;  }
+.logoI {text-align: center;font-family:Font1; font-size: 20px ; text-decoration-line:underline;}
 
-/* Sections start */
-.section0{ height: 700px;background-color: rgb(253, 82, 0); }
-.molding0{  padding: 40px 300px 60px ; height: 200px; width: 550px;float: left; 
-}
+/* Sections */
 
-.section1{ height: 650px;background-color: papayawhip; }
-.molding1{  padding: 40px 300px 60px ; height: 200px; width: 550px;float: left; 
-}
+.section0{ height: 50vw;background-color: rgb(253, 82, 0); }
+.molding0 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 50px;
+  grid-row-gap: 0px;
+  }
+  
+  .div3 { grid-area: 1 / 2 / 2 / 3; text-decoration:wavy; font-size: 15vw; font-family: font1; }
 
-.section2 {height: 450px; border: solid 1px rgb(20, 36, 138); background-color:rgb(253, 82, 0) ; 
-}
-.molding2{  padding: 40px 300px 60px ; height: 200px; width: 550px; float: left; 
-}
+.section1{ height: 45vw;background-color: papayawhip; border: solid 1px rgb(20, 36, 138); }
+  .molding1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 50px;
+  grid-row-gap: 0px;
+  }
+  
+  .div1 { grid-area: 1 / 1 / 2 / 2; }
+  .div2 { grid-area: 1 / 2 / 2 / 3; }
 
-.section3 {height: 450px; ; background-color:papayawhip ; 
+.section2 {height: 45vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
 }
-.molding3{  padding: 40px 300px 60px ; height: 200px; width: 550px;float: left; 
+.molding2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 50px;
+  grid-row-gap: 0px;
+  }
+  
+  .div4 { grid-area: 1 / 1 / 2 / 2; }
+  .div5 { grid-area: 1 / 2 / 2 / 3; }
+
+.section3 {height: 45vw; ; background-color:papayawhip ; 
 }
+.molding3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  
+  .div6 { grid-area: 1 / 2 / 2 / 3;  margin-top: 5vw; }
 
 
 /* Sections end */
-/* Home End */
+
+
+/* Image Slider */
+
+/* Image Slider End */
 
 
 
@@ -87,13 +121,34 @@ body{ margin: 0; padding: 0; background-color: black; min-height: 100vh;
 
 
 
+.section4{height: 20vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
+}
+
+.molding4 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 50px;
+  grid-row-gap: 10px;
+  }
+  
+  .div7 { grid-area: 1 / 1 / 2 / 2; }
+  .div8 { grid-area: 1 / 2 / 2 / 3; }
+  .div9 { grid-area: 1 / 3 / 2 / 4; }
+
+  .section5{background-color: rgb(249, 245, 255); height: 5vw; border: solid 1px rgb(20, 36, 138); text-align: center;}
+  .molding5 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 50px;
+    grid-row-gap: 10px;
+    }
+    
+    .footer { grid-area: 1 / 2 / 2 / 3; text-align: center;font-family:Font1; font-size: 4vw ; ;}
 
 
 
-
-
-footer{background-color: rgb(249, 245, 255); height: 300px; border: solid 1px rgb(20, 36, 138)}
-
-
+  /* Home End */
   
   
