--- a/TCC/Index.css
+++ b/TCC/Index.css
@@ -13,8 +13,11 @@ body{padding: 0; margin: 0;}
 .title{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(253, 82, 0);text-align: center;padding-top: 1vw; }
 .titleL{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 3vw; color: papayawhip;text-align: center;}
 
+.title2{  font-family:Font1; font-weight: bold; font-size: 2vw; color: rgb(0, 0, 0);text-align:left; }
+
 .textos {font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(42, 45, 52); text-align: center; }
 .textos1 {font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(42, 45, 52); text-align: center;  }
+.textos2 {font-family:Font2; font-weight: bold; font-size: 2vw; color: rgb(42, 45, 52); text-align: left; }
 
 
 /* NAV start */
@@ -26,7 +29,7 @@ body{padding: 0; margin: 0;}
     background-size: 200% auto;
     animation: textShine 5s ease-in-out infinite ;
     font-family:Font1 ;
-    font-size: 60px;
+    font-size: 5vw;
   }
   @keyframes textShine {
     to {
@@ -50,7 +53,7 @@ body{padding: 0; margin: 0;}
   }
 
 
-  header { background-color: rgb(249, 245, 255); height: 6vh; border: solid 1px rgb(20, 36, 138); margin-left: auto; margin-right: auto; padding: 3vh; font-size: 3vw;font-family:Font2; position: fixed; width: 100%;
+  header { background-color: rgb(249, 245, 255); height: 5vw; border: solid 1px rgb(20, 36, 138); margin-left: auto; margin-right: auto; padding: 3vh; font-size: 3vw;font-family:Font2; position: fixed; width: 100%;
   }
  
  /* NAV end */
@@ -79,7 +82,7 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 0px;
   }
   
-  .div1 { grid-area: 1 / 1 / 2 / 2; }
+  .div1 { grid-area: 1 / 1 / 2 / 2; padding-left: 4vw;}
   .div2 { grid-area: 1 / 2 / 2 / 3; }
 
 .section2 {height: 45vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
@@ -92,7 +95,7 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 0px;
   }
   
-  .div4 { grid-area: 1 / 1 / 2 / 2; }
+  .div4 { grid-area: 1 / 1 / 2 / 2;padding-left: 4vw;padding-top: 5vw; }
   .div5 { grid-area: 1 / 2 / 2 / 3; }
 
 .section3 {height: 45vw; ; background-color:papayawhip ; 
@@ -121,7 +124,7 @@ body{padding: 0; margin: 0;}
 
 
 
-.section4{height: 20vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
+.section4{height: 15vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
 }
 
 .molding4 {
@@ -132,20 +135,11 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 10px;
   }
   
-  .div7 { grid-area: 1 / 1 / 2 / 2; }
-  .div8 { grid-area: 1 / 2 / 2 / 3; }
-  .div9 { grid-area: 1 / 3 / 2 / 4; }
+  .div7 { grid-area: 1 / 1 / 2 / 2; padding-left: 2vw; }
+  .div8 { grid-area: 1 / 2 / 2 / 3; ; }
+  .div9 { grid-area: 1 / 3 / 2 / 4; font-size: 3vh; font-family: font1; }
 
-  .section5{background-color: rgb(249, 245, 255); height: 5vw; border: solid 1px rgb(20, 36, 138); text-align: center;}
-  .molding5 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 50px;
-    grid-row-gap: 10px;
-    }
-    
-    .footer { grid-area: 1 / 2 / 2 / 3; text-align: center;font-family:Font1; font-size: 4vw ; ;}
+  footer{ text-align: center; font-size: 3vh; font-family: font1;}
 
 
 
