--- a/TCC/Index.css
+++ b/TCC/Index.css
@@ -19,6 +19,15 @@ body{padding: 0; margin: 0;}
 .textos1 {font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(42, 45, 52); text-align: center;  }
 .textos2 {font-family:Font2; font-weight: bold; font-size: 2vw; color: rgb(42, 45, 52); text-align: left; }
 
+.btnSM {background-color: rgb(253, 82, 0); border-radius: 3vw  ;border-color: rgb(20, 36, 138); font-size: 2.5vw;
+   font-family: font2; text-align: center; align-content: center; display:flexbox;
+   text-decoration: none;color: rgb(42, 45, 52)
+
+  
+  
+  ;
+
+}
 
 /* NAV start */
 .logo {text-align:start; margin-right: 2vw;font-size: 3vw;   background: linear-gradient(to right, #000 20%, #000 30%, #000 70%, rgb(253, 82, 0) 80%);
@@ -56,13 +65,20 @@ body{padding: 0; margin: 0;}
   header { background-color: rgb(249, 245, 255); height: 5vw; border: solid 1px rgb(20, 36, 138); margin-left: auto; margin-right: auto; padding: 3vh; font-size: 3vw;font-family:Font2; position: fixed; width: 100%;
   }
  
+@media (max-width:800px){
+
+  header{
+    font-size: 4vw;
+  }
+}
+
  /* NAV end */
 
 .logoI {text-align: center;font-family:Font1; font-size: 20px ; text-decoration-line:underline;}
 
 /* Sections */
 
-.section0{ height: 50vw;background-color: rgb(253, 82, 0); }
+.section0{ height: 60vw;background-color: rgb(253, 82, 0); }
 .molding0 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -71,7 +87,7 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 0px;
   }
   
-  .div3 { grid-area: 1 / 2 / 2 / 3; text-decoration:wavy; font-size: 15vw; font-family: font1; }
+  .div3 { grid-area: 1 / 2 / 2 / 3; text-decoration:wavy; font-size: 15vw; font-family: font1; padding-top: 7vw; }
 
 .section1{ height: 45vw;background-color: papayawhip; border: solid 1px rgb(20, 36, 138); }
   .molding1 {
@@ -82,8 +98,8 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 0px;
   }
   
-  .div1 { grid-area: 1 / 1 / 2 / 2; padding-left: 4vw;}
-  .div2 { grid-area: 1 / 2 / 2 / 3; }
+  .div1 { grid-area: 1 / 1 / 2 / 2;padding-top: 2vw ;}
+  .div2 { grid-area: 1 / 2 / 2 / 3; margin-top: 2vw;padding-right: 4vw }
 
 .section2 {height: 45vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
 }
@@ -139,7 +155,7 @@ body{padding: 0; margin: 0;}
   .div8 { grid-area: 1 / 2 / 2 / 3; ; }
   .div9 { grid-area: 1 / 3 / 2 / 4; font-size: 3vh; font-family: font1; }
 
-  footer{ text-align: center; font-size: 3vh; font-family: font1;}
+  footer{ text-align: center; font-size: 3vh; font-family: font1; height: 3vw; margin-top: 3vw;}
 
 
 
