--- a/TCC/Index.css
+++ b/TCC/Index.css
@@ -10,6 +10,9 @@ body{padding: 0; margin: 0;}
  
 .float {float: right;}
 /* Home */
+
+/* Formatação de textos */
+
 .title{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(253, 82, 0);text-align: center;padding-top: 1vw; }
 .titleL{ text-decoration: none; font-family:Font2; font-weight: bold; font-size: 3vw; color: papayawhip;text-align: center;}
 
@@ -19,15 +22,9 @@ body{padding: 0; margin: 0;}
 .textos1 {font-family:Font2; font-weight: bold; font-size: 3vw; color: rgb(42, 45, 52); text-align: center;  }
 .textos2 {font-family:Font2; font-weight: bold; font-size: 2vw; color: rgb(42, 45, 52); text-align: left; }
 
-.btnSM {background-color: rgb(253, 82, 0); border-radius: 3vw  ;border-color: rgb(20, 36, 138); font-size: 2.5vw;
-   font-family: font2; text-align: center; align-content: center; display:flexbox;
-   text-decoration: none;color: rgb(42, 45, 52)
 
-  
-  
-  ;
+/* Formatação de textos End */
 
-}
 
 /* NAV start */
 .logo {text-align:start; margin-right: 2vw;font-size: 3vw;   background: linear-gradient(to right, #000 20%, #000 30%, #000 70%, rgb(253, 82, 0) 80%);
@@ -78,6 +75,7 @@ body{padding: 0; margin: 0;}
 
 /* Sections */
 
+/* logo Inicial */
 .section0{ height: 60vw;background-color: rgb(253, 82, 0); }
 .molding0 {
   display: grid;
@@ -87,7 +85,13 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 0px;
   }
   
-  .div3 { grid-area: 1 / 2 / 2 / 3; text-decoration:wavy; font-size: 15vw; font-family: font1; padding-top: 7vw; }
+  .div3 { grid-area: 1 / 2 / 2 / 3; text-decoration:wavy; font-size: 15vw; font-family: font1; padding-top: 7vw;
+  }
+
+
+/* logo Inicial end */
+ 
+/* Quem Somos */
 
 .section1{ height: 45vw;background-color: papayawhip; border: solid 1px rgb(20, 36, 138); }
   .molding1 {
@@ -100,7 +104,13 @@ body{padding: 0; margin: 0;}
   
   .div1 { grid-area: 1 / 1 / 2 / 2;padding-top: 2vw ;}
   .div2 { grid-area: 1 / 2 / 2 / 3; margin-top: 2vw;padding-right: 4vw }
+  .btnSM {background-color: rgb(253, 82, 0); border-radius: 3vw  ;border-color: rgb(20, 36, 138); font-size: 2.5vw;
+    font-family: font2; text-align: center; align-content: center; display:flexbox;
+    text-decoration: none;color: rgb(42, 45, 52) ;
+ }
+/* Quem Somos End */
 
+/* Por que participar */
 .section2 {height: 45vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
 }
 .molding2 {
@@ -111,8 +121,12 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 0px;
   }
   
-  .div4 { grid-area: 1 / 1 / 2 / 2;padding-left: 4vw;padding-top: 5vw; }
-  .div5 { grid-area: 1 / 2 / 2 / 3; }
+  .div4 { grid-area: 1 / 1 / 2 / 2;padding-left: 4vw;padding-top: 7vw; }
+  .div5 { grid-area: 1 / 2 / 2 / 3; padding-top: 3vw; }
+
+  /* Por que participar End */
+  
+/* Gerador de Frases */
 
 .section3 {height: 45vw; ; background-color:papayawhip ; 
 }
@@ -126,21 +140,14 @@ body{padding: 0; margin: 0;}
   
   .div6 { grid-area: 1 / 2 / 2 / 3;  margin-top: 5vw; }
 
+/* Gerador de Frases End */
 
 /* Sections end */
 
-
-/* Image Slider */
-
-/* Image Slider End */
+/* Footer */
 
 
-
-
-
-
-
-.section4{height: 15vw; border: solid 1px ; background-color:rgb(253, 82, 0) ; 
+.foot{height: 15vw; border: solid 0.1vw rgb(20, 36, 138) ; background-color:rgb(253, 82, 0) ; 
 }
 
 .molding4 {
@@ -151,12 +158,13 @@ body{padding: 0; margin: 0;}
   grid-row-gap: 10px;
   }
   
-  .div7 { grid-area: 1 / 1 / 2 / 2; padding-left: 2vw; }
+  .div7 { grid-area: 1 / 1 / 2 / 2; padding-left: 2vw; margin-top: 5vw; }
   .div8 { grid-area: 1 / 2 / 2 / 3; ; }
-  .div9 { grid-area: 1 / 3 / 2 / 4; font-size: 3vh; font-family: font1; }
+  .div9 { grid-area: 1 / 3 / 2 / 4; font-size: 2vw; font-family: font2; }
 
-  footer{ text-align: center; font-size: 3vh; font-family: font1; height: 3vw; margin-top: 3vw;}
+  footer{ text-align: center; font-size: 3vw; font-family: font1; background-color:rgb(253, 82, 0);margin: 0 ; padding: 0;}
 
+/* Footer End */
 
 
   /* Home End */
